mudança de pasta

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/balao.png" type="image/x-icon" />
-    <link rel="stylesheet" href="css/tela_inicial.css" />
-    <link rel="stylesheet" href="css/responsivo.css" />
     <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet" />
     <link href="https://fonts.cdnfonts.com/css/avocade" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="tela_inicial.css">
+    <link rel="stylesheet" href="responsivo.css">
 
     <title>DIA DA SAMANTHA</title>
   </head>
