--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         </div>
 
         <div class="pai-1">
-          <div class="filho">
-              <p id="x">Hoje é o dia em que celebramos mais um capítulo da sua incrivel jornada, e eu não poderia deixar de expressar o quanto você é importante para mim, não apenas como amiga, mas como alguém que despertou algo especial em meu <span>coração...</span></p>
-            </div>        
+          <div class="filho-1">
+              <p id="x">Hoje é o dia em que celebramos mais um capítulo da sua incrivel jornada, e eu não poderia deixar de expressar o quanto você é importante para mim, não apenas como amiga, mas como alguém que despertou algo especial em meu <span>coração...</p>
           </div>
+        </div>
         
       
         <div class="menssagem-2">
